# CleanPhotos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  program_parameters.txt
src/: directory.c  flags.c  hash_table.c  linked_list.c  main.c  path.c  utils.c
src/headers/: directory.h  flags.h  hash_table.h  linked_list.h  path.h  utils.h
